--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
         <title>About Vancouver</title>
     </head>
     <body>
-        <h1>Vancouver</h1>
-        <p>Vancouver is a beautiful city in B.C., Canada. Explore this website to learn more!</p>
+        <div class = "home-content-div">
+            <h1>Vancouver</h1>
+
+            <img src="https://images.unsplash.com/photo-1609825488888-3a766db05542?q=80&w=3132&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="50%" width="50%">
+            <!--This is comment-->
+            <!-- You do not have to copy-->
+             <!-- Websites for images: Unsplash and Pexels-->
+
+            <p>Vancouver is a beautiful city in B.C., Canada. Explore this website to learn more!</p>
+        </div>
+        <footer>
+            <p>By Instructors</p>
+        </footer>
     </body>
 </html>
