--- a/facts.html
+++ b/facts.html
@@ -6,7 +6,7 @@
         <title>About Vancouver</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body class="home-page">
+    <body class="facts-page">
         <div>
             <nav class="navbar">
                 <a href="index.html">Home</a>
@@ -14,12 +14,8 @@
                 <a href="">Gallery</a>
             </nav>
         </div>
-        <div class = "home-content-div">
-            <h1>Vancouver</h1>
-
-            <img src="https://images.unsplash.com/photo-1609825488888-3a766db05542?q=80&w=3132&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="50%" width="50%">
-
-            <p>Vancouver is a beautiful city in B.C., Canada. Explore this website to learn more!</p>
+        <div class = "facts-content-div">
+            
         </div>
         <footer>
             <p>By Instructors</p>
