--- a/facts.html
+++ b/facts.html
@@ -11,11 +11,16 @@
             <nav class="navbar">
                 <a href="index.html">Home</a>
                 <a href="facts.html">Fun Facts</a>
-                <a href="">Gallery</a>
+                <a href="gallery.html">Gallery</a>
             </nav>
         </div>
         <div class = "facts-content-div">
-            
+            <h2>Here are some fun facts about the city of Vancouver</h2>
+            <ul>
+                <li>Vancouver has the 4th largest cruise ship terminal in the world</li>
+                <li>Vancouver's Stanley Park is 10% larger than Central Park in New York</li>
+                <li>Vancouver has one of the mildest climates in Canada</li>
+            </ul>
         </div>
         <footer>
             <p>By Instructors</p>
